fixed container width and font letter spacing

--- a/src/scss/base/title.scss
+++ b/src/scss/base/title.scss
@@ -2,5 +2,6 @@
   font-weight: 600;
   font-size: clamp(1.75rem, 1.6rem + 0.75vw, 2.5rem);
   line-height: 120%;
+  letter-spacing: 0.05em;
   color: var(--black);
 }
